# robotarm

./: .gitattributes
surwindsurf/MFCApplication1/: MFCApplication1.sln  MFCApplication1.slnx
surwindsurf/MFCApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
surwindsurf/MFCApplication1/ConsoleApplication1/Debug/: IOBridge.exe.recipe
surwindsurf/MFCApplication1/Debug/: config.ini
surwindsurf/MFCApplication1/Debug/logs/: log_20260113.txt  log_20260116.txt  log_20260118.txt  log_20260119.txt  log_20260120.txt
surwindsurf/MFCApplication1/GPIO/include/: EVOC_BPI_DLL.h
surwindsurf/MFCApplication1/GPIO/lib/: EVOC_BPI_DLL.lib
surwindsurf/MFCApplication1/IOBridge/: IOBridgeMain.cpp  IOBridgeProtocol.h
surwindsurf/MFCApplication1/MFCApplication1/: EVOC_BPI_DLL.def  EVOC_BPI_DLL.h  IIOController.h  IOController.cpp  IOController.h  IOControllerProxy.cpp  IOControllerProxy.h  IRobotArmController.h  IVisionSystem.h  LogManager.cpp  LogManager.h  MFCApplication1.aps  MFCApplication1.rc  MFCApplication1.vcxproj  MFCApplication1.vcxproj.filters  MFCApplication1Dlg.cpp  MFCApplication1Dlg.h  MFCApplication1_backup.rc  MFCApplication1_new.aps  MockVisionSystem.cpp  MockVisionSystem.h  ProcedureController.cpp  ProcedureController.h  ProcedureDlg.cpp  ProcedureDlg.h  ProcedureParams.h  README.md  RobotArmController.cpp  RobotArmController.h  SerialPort.cpp  SerialPort.h  pch.h  resource.h
surwindsurf/MFCApplication1/MFCApplication1/Debug/: MFCApplication1.exe.recipe  MFCApplication1.res
surwindsurf/MFCApplication1/MFCApplication1/x64/Debug/: MFCApplication1.exe.recipe
surwindsurf/MFCApplication1/MFCApplication1/x64/Release/: MFCApplication1.exe.recipe  MFCApplication1.ipdb  (+1 more)
surwindsurf/MFCApplication1/rc MFCApplication1/: MFCApplication1.aps
surwindsurf/MFCApplication1/x64/Debug/: config.ini
surwindsurf/MFCApplication1/x64/Release/: config.ini
surwindsurf/xCoreSDK_cpp-v0.6.0/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
surwindsurf/xCoreSDK_cpp-v0.6.0/doc/: CMakeLists.txt
surwindsurf/xCoreSDK_cpp-v0.6.0/example/: CMakeLists.txt  communication_example.cpp  force_control_commands.cpp  function_helper.hpp  modbusRTU_endtool_control.cpp  move_example.cpp  path_record.cpp  print_helper.hpp  read_robot_state.cpp  rl_project.cpp  sdk_example.cpp  xmatemodel_er3_er7p.cpp
surwindsurf/xCoreSDK_cpp-v0.6.0/example/rt/: CMakeLists.txt  cartesian_impedance_control.cpp  cartesian_s_line.cpp  follow_cart_position.cpp  follow_joint_position.cpp  joint_impedance_control.cpp  joint_position_control.cpp  joint_s_line.cpp  move_commands.cpp  rt_funtion_helper.hpp  rt_industrial.cpp  torque_control.cpp
surwindsurf/xCoreSDK_cpp-v0.6.0/include/: CMakeLists.txt
surwindsurf/xCoreSDK_cpp-v0.6.0/include/rokae/: base.h  data_types.h  exception.h  force_control.h  model.h  motion_control_rt.h  planner.h  robot.h  utility.h
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/: CMakeLists.txt
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Linux/aarch64/: libxCoreSDK.so.0.6.0
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Linux/x86_64/: libxCoreSDK.so.0.6.0
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Windows/Debug/32bit/: xCoreSDK.lib  xCoreSDK_static.lib
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Windows/Debug/64bit/: xCoreSDK.lib  xCoreSDK_static.lib
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Windows/Release/32bit/: xCoreSDK.lib  xCoreSDK_static.lib
surwindsurf/xCoreSDK_cpp-v0.6.0/lib/Windows/Release/64bit/: xCoreSDK.lib  xCoreSDK_static.lib
(+9 files in other folders)
